# agnostic-report

./: .dockerignore  .env  .gitattributes  .gitignore  LICENSE  MANIFEST.in  docker-compose.dev.yaml  docker-compose.yaml  readme.md  requirements.txt  setup.cfg  setup.py
agnostic-core/: MANIFEST.in  setup.cfg
agnostic-core/src/agnostic/core/: config.py  models.py  session.py
agnostic-core/src/agnostic/core/crud/: __init__.py  attachments.py  exceptions.py  logs.py  metrics.py  progress.py  projects.py  test_runs.py  tests.py
agnostic-core/src/agnostic/core/dal/: __init__.py  attachments.py  logs.py  metrics.py  metrics_ot.py  progress.py  projects.py  reporting.py  requests.py  test_runs.py  tests.py
agnostic-core/src/agnostic/core/dal_v1/: attachments.py  exceptions.py  logs.py  metrics.py  metrics_ot.py  progress.py  projects.py  reporting.py  requests.py  test_runs.py  tests.py
agnostic-core/src/agnostic/core/migrations/: alembic.ini  env.py  upgrade.py
agnostic-core/src/agnostic/core/migrations/versions/: 30878f8f373e_sqla_v2_stricter_constraints_server_.py  441b148571a0_use_timestamps_with_timezones.py  9bbaff28298e_initial_schema.py  aae6e771fafc_add_indexes_test_run_id_test_runs_start_.py
agnostic-core/src/agnostic/core/schemas/: attachments.py  base.py  client.py  metrics_ot.py  progress.py  projects.py  reporting.py  requests.py  test_runs.py  tests.py
agnostic-core/src/agnostic/core/schemas/reporting/: logs.py  projects.py  test_runs.py
agnostic-core/src/agnostic/core/schemas/v1/: __init__.py  logs.py  metrics.py  metrics_ot.py
agnostic-core/src/agnostic/core/schemas/v2/: __init__.py  attachments.py  base.py  logs.py  lookups.py  metrics.py  progress.py  projects.py  test_runs.py  tests.py
agnostic-core/src/agnostic/core/schemas_v1/: base.py  lookups.py  projects.py  tests.py
agnostic-core/src/agnostic/core/schemas_v1/reporting/: metrics_ot.py  tests.py
agnostic-pytest/: README.md  pyproject.toml  setup.cfg
agnostic-pytest/src/agnostic/pytest/: __init__.py
agnostic-pytest/src/agnostic/pytest/agnostic/: client.py
agnostic-pytest/src/agnostic/pytest/agnostic/schemas/: __init__.py  attachments.py  metrics.py  progress.py  reporting.py  requests.py  test_runs.py
agnostic-pytest/src/agnostic/pytest/agnostic/schemas/reporting/: __init__.py  metrics.py  progress.py  tests.py  widgets.py
agnostic-web/: .gitignore  MANIFEST.in  setup.cfg  setup.py
agnostic-web-ui/: .eslintrc.js  package-lock.json  package.json  vite.config.ts
agnostic-web-ui/src/: main.ts
agnostic-web-ui/src/components/: VuesticLogo.vue
agnostic-web-ui/src/pages/projects/: Project.vue  SampleConfig.json  TestRun.vue
agnostic-web-ui/src/pages/projects/components/: DownloadableCell.vue  ProjectCreatePopup.vue
agnostic-web-ui/src/pages/projects/filters/: FiltersPopup.vue  TimeRangeSlider.vue
agnostic-web-ui/src/pages/projects/layouts/: FullPage.vue
agnostic-web-ui/src/pages/projects/widgets/: Placeholder.vue  ProjectTestsOverTime.vue  TestRunJSONProperty.vue  TestRunMetricsAndProperties.vue  TestRunMetricsList.vue  TestRunOverTimeCharts.vue  TestRunProgress.vue  TestRunVariant.vue
agnostic-web-ui/src/pages/projects/widgets/TestRunTestsList/: TestPopup.vue  index.vue
agnostic-web-ui/src/router/: index.ts
agnostic-web-ui/src/services/vuestic-ui/icons-config/: icons-config.ts
agnostic-web-ui/src/store/: index.ts
agnostic-web/src/agnostic/web/api/: __init__.py
agnostic-web/src/agnostic/web/api/routers/: attachments.py  logs.py  metrics.py  metrics_ot.py  progress.py  projects.py  reporting.py  requests.py  system.py  test_runs.py  tests.py
agnostic-web/src/agnostic/web/api/routers/v1/: __init__.py  attachments.py  logs.py  metrics.py  metrics_ot.py  progress.py  projects.py  reporting.py  requests.py  test_runs.py  tests.py
agnostic-web/src/agnostic/web/api/routers/v2/: __init__.py  attachments.py  logs.py  metrics.py  progress.py  projects.py  test_runs.py  tests.py
agnostic-web/src/agnostic/web/api/routers_v1/: attachments.py  logs.py  metrics.py  metrics_ot.py  progress.py  projects.py  reporting.py  requests.py  test_runs.py  tests.py
agnostic-web/src/agnostic/web/api/utils/: __init__.py
dev/demo-data/: alembic.ini  datagen.py
dev/demo-data/resources/configs/: Rich Configuration Project.json
dev/tests/: conftest.py  test_smoke.py
docker/deployment/: Dockerfile
docker/postgres/: Dockerfile  init.sh
src/: run.py
src/agnostic_report/: __init__.py  config.py
src/agnostic_report/api/routers/: attachments.py  logs.py  metrics.py  metrics_ot.py  progress.py  projects.py  reporting.py  requests.py  test_runs.py  tests.py
src/agnostic_report/api/schemas/: client.py
src/agnostic_report/db/: models.py  session.py
src/agnostic_report/db/dal/: attachments.py  logs.py  metrics.py  metrics_ot.py  progress.py  projects.py  reporting.py  requests.py  test_runs.py  tests.py
src/agnostic_report/migrations/: env.py
src/agnostic_report/migrations/versions/: 9bbaff28298e_initial_schema.py
src/agnostic_report/ui/: index.html  package-lock.json
src/agnostic_report/ui/src/: vue3-plotly.d.ts
src/agnostic_report/ui/src/i18n/locales/: gb.json
src/agnostic_report/ui/src/layouts/: AppLayout.vue
src/agnostic_report/ui/src/utils/: index.ts
src/dev/demo-data/: datagen.py  requirements.txt
src/dev/demo-data/resources/configs/: Minimal Configuration Project.json
src/plugins/pytest/: MANIFEST.in  setup.cfg
src/plugins/pytest/pytest_agnostic/: __init__.py  _version.py
src/plugins/pytest/pytest_agnostic/agnostic/: client.py
src/plugins/pytest/pytest_agnostic/agnostic/schemas/: __init__.py  client.py
(+21 files in other folders)
