[metadata]
name = agnostic-report
author = Holoplot GmbH
author_email = developers@holoplot.com
version = file: VERSION
description = Agnostic Report
long_description = file: README.md
long_description_content_type = text/markdown
keywords = testing, development, reporting, fastapi, asyncio
license = MIT
home_page = https://github.com/holoplot/agnostic
project_urls =
    Issue Tracker = https://github.com/holoplot/agnostic/issues
classifiers =
    Intended Audience :: Developers
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Topic :: Software Development :: Libraries :: Python Modules

[options]
zip_safe = False
include_package_data = True
package_dir=
    = src
packages = find:
python_requires = >=3.10

install_requires =
    alembic>=1.9.0,<2.0
    asyncpg>=0.27.0,<1.0
    fastapi>=0.89.1,<1.0
    SQLAlchemy>=1.4.46,<2.0
    uvicorn>=0.20.0,<1.0
    orjson>=3.8.5,<4.0
    python-multipart>=0.0.5,<1.0

[options.packages.find]
where=src
