[metadata]
name = agnostic-core
author = Vadym Bobrenok
author_email = vadim.bobrenok@gmail.ocm
version = file: VERSION
description = Agnostic Report Core
keywords = testing, development, reporting, fastapi, asyncio
license = MIT
home_page = https://github.com/VaderZ/agnostic
project_urls =
    Issue Tracker = https://github.com/VaderZ/agnostic/issues
classifiers =
    Intended Audience :: Developers
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Topic :: Software Development :: Libraries :: Python Modules

[options]
zip_safe = False
include_package_data = True
package_dir=
    = src
packages = find_namespace:
python_requires = >=3.10

install_requires =
    alembic>=1.11.0,<2.0
    asyncpg>=0.28.0,<1.0
    pydantic>=2.2.0,<3.0
    pydantic-settings>=2.0.3,<=3.0
    SQLAlchemy>=2.0.20,<3.0
    uvicorn>=0.23.0,<1.0
    orjson>=3.9.5,<4.0

[options.packages.find]
where=src
