[metadata]
name = agnostic-pytest
author = Vadym Bobrenok
author_email = vadim.bobrenok@gmail.ocm
version = file: VERSION
description = Pytest plugin for Agnostic Report
long_description = file: README.md
long_description_content_type = text/markdown
keywords = testing, reporting
license = MIT
home_page = https://github.com/VaderZ/agnostic-report
project_urls =
    Issue Tracker = https://github.com/VaderZ/agnostic-report/issues
classifiers =
    Intended Audience :: Developers
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Topic :: Software Development :: Libraries :: Python Modules

[options]
include_package_data = True
package_dir=
    = src
packages = find_namespace:
python_requires = >=3.7

install_requires =
    pydantic>=2.1.1,<3.0
    pytest>=7.0,<8.0
    redis>=4.2.0,<5.0
    requests>=2.27.1,<3.0

[options.entry_points]
pytest11 =
    agnostic = agnostic.pytest

[options.packages.find]
where=src
