[metadata]
name = agnostic-web
author = Vadym Bobrenok
author_email = vadim.bobrenok@gmail.ocm
version = file: VERSION
description = Agnostic Report Web API and UI
keywords = testing, development, reporting, fastapi, asyncio
license = MIT
home_page = https://github.com/VaderZ/agnostic
project_urls =
    Issue Tracker = https://github.com/VaderZ/agnostic/issues
classifiers =
    Intended Audience :: Developers
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Topic :: Software Development :: Libraries :: Python Modules

[options]
zip_safe = False
include_package_data = True
package_dir=
    = src
packages = find_namespace:
python_requires = >=3.10

[options.packages.find]
where=src
