[metadata]
name = pytest_agnostic
author = Holoplot
author_email = developers@holoplot.com
version = file: VERSION
description = Pytest plugin for Agnostic Report
long_description = file: README.md
long_description_content_type = text/markdown
keywords = testing, testoscopia, reporting, holoplot
license = Proprietary
home_page = https://github.com/holoplot/agnostic
project_urls =
    Issue Tracker = https://github.com/holoplot/agnostic/issues
classifiers =
    Intended Audience :: Developers
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Topic :: Software Development :: Libraries :: Python Modules

[options]
include_package_data = True
packages = find:
python_requires = >=3.7

install_requires =
    pydantic>=1.9.0,<2.0
    pytest>=7.0,<8.0
    redis>=4.2.0,<5.0
    requests>=2.27.1,<3.0

[options.entry_points]
pytest11 =
    agnostic = pytest_agnostic
